--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@headlessui/tailwindcss": "^0.2.0",
+    "@prisma/client": "^5.13.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^20.10.8",
     "@types/react": "^18.2.47",
@@ -19,6 +20,7 @@
     "autoprefixer": "^10.4.12",
     "clsx": "^2.1.0",
     "framer-motion": "^10.15.0",
+    "mysql2": "^3.9.7",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,6 +33,7 @@
     "eslint-config-next": "^14.0.4",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "prisma": "^5.13.0",
     "sharp": "0.33.1"
   }
 }
