--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "framer-motion": "^10.15.0",
     "mysql2": "^3.9.7",
     "next": "^14.0.4",
+    "next-i18next": "^15.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "use-debounce": "^10.0.0"
