--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "prettier": "^3.1.1",
