feat: 简单的注册、登录功能

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL= mysql://root:123456@localhost:3306/x_web
+JWT_SECRET = '123456';
