--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.12",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "framer-motion": "^10.15.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.7",
     "next": "^14.0.4",
     "next-i18next": "^15.3.0",
@@ -33,6 +35,8 @@
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
