--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL= mysql://root:123456@localhost:3306/x_web
-JWT_SECRET = '123456';
+DATABASE_URL=mysql://root:123456@localhost:3306/x_web
+JWT_SECRET=123456
